<resources>
    <string name="app_name">Preferencies_demo</string>

    <string name="pref_category_one_key">pref_category_one</string>
    <string name="pref_category_one_title">Advanced Settings</string>

    <string name="pref_switch_one_key">switch_one</string>
    <string name="pref_switch_one_title">Setting One</string>
    <string name="pref_switch_one_summary">Turn on to see more options</string>

    <string name="pref_switch_two_key">switch_two</string>
    <string name="pref_switch_two_title">Setting Two</string>
    <string name="pref_switch_two_summary">Setting for something else</string>

    <string name="pref_checkbox_one_key">checkbox_one</string>
    <string name="pref_checkbox_one_title">Select option 1</string>
    <string name="pref_checkbox_one_summary">Enable option one</string>


    <string name="pref_checkbox_two_key">checkbox_two</string>
    <string name="pref_checkbox_two_title">Select option 2</string>
    <string name="pref_checkbox_two_summary">Enable option two</string>

</resources>
